# Quaternion-module

./: .gitignore  CMakeLists.txt  Quaternion.cpp  Quaternion.hpp  README.md  TestQuaternion.cpp  main.cpp
